--- a/team_jg_entertainment/src/main/resources/templates/menu/searchMenu.html
+++ b/team_jg_entertainment/src/main/resources/templates/menu/searchMenu.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="description" content="Restaurant JG demo project">
+    <meta name="author" content="JavaGuru">
+    <title>Restaurant JG</title>
 </head>
 
 <style>
@@ -16,6 +18,50 @@ h2 {
 </style>
 
 <body>
+
+<h2>Search Menu</h2>
+
+<table>
+    <tr>
+        <td>Title:</td>
+    </tr>
+
+    <tr>
+        <form action="/searchMenu" th:object="${request}" method="post">
+            <td><input type="text" th:field="${request.title}"/></td>
+            <td>
+                <input type="submit" value="Search Menu"/>
+                <input type="reset" value="Clear"/>
+            </td>
+        </form>
+    </tr>
+</table>
+
+<td th:if="${menus != null}">
+    <tr th:each="menu : ${menus}">
+        <td th:text="${menu.title}"></td>
+        <td th:text="${menu.number}"></td>
+        <td th:text="${menu.description}"></td>
+        <td th:text="${menu.price}"></td>
+    </tr>
+</td>
+
+<td th:if="${errors != null}">
+    <tr th:each="error : ${errors}">
+        <td th:text="${error.field}"></td>
+        <td th:text="${error.description}"></td>
+    </tr>
+</td>
+
+<form action="/" method="get">
+    <input type="submit" value="Main menu" name="Submit"
+           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+</form>
+
+<form action="/menuMenu" method="get">
+    <input type="submit" value="Return to Menu" name="Submit"
+           style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
+</form>
 
 </body>
 </html>
