--- a/team_jg_entertainment/src/main/resources/templates/user/deleteUser.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/deleteUser.html
@@ -55,7 +55,7 @@ h2 {
 </form>
 
 <form action="/userMenu" method="get">
-    <input type="submit" value="Return to User" name="Submit"
+    <input type="submit" value="Return to users' menu" name="Submit"
            style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;"/>
 </form>
 </body>
