--- a/team_jg_entertainment/src/main/resources/templates/user/showUsers.html
+++ b/team_jg_entertainment/src/main/resources/templates/user/showUsers.html
@@ -70,7 +70,7 @@ background-color: #ddd;
 </form>
 
 <form action="/userMenu" method="get">
-    <input type="submit" value="Return to User" name="Submit"
+    <input type="submit" value="Return to users' menu" name="Submit"
            style="color: white; text-shadow: 1px 1px 2px black, 0 0 25px blue, 0 0 6px darkBlue; font-size:17px;" />
 </form>
 
