--- a/team_oddJobs/src/main/resources/templates/index.html
+++ b/team_oddJobs/src/main/resources/templates/index.html
@@ -6,14 +6,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="with=device-width, initial-scale=1.0">
 	<title>Odd Jobs</title>
-	<link rel="stylesheet" href="style.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@200&display=swap" rel="stylesheet">
 	<link rel="stylesheet"
 		  href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css">
 </head>
-
 
 
 
@@ -110,7 +108,7 @@
 
 <section class="review">
 	<h1>Here are some reviews</h1>
-	<p>Some rewievs are still pending, our top monkeys are writing them as you read this!</p>
+	<p>Some reviews are still pending, our top monkeys are writing them as you read this!</p>
 	<div class="row">
 		<div class="review-col">
 			<h3>Excelent</h3>
@@ -123,6 +121,12 @@
 			<h3>Meeh, could have been better</h3>
 			<p>Guy came to fix my toilet, after he fixed it I went to test it, came out, TV and the guy was gone. 2/5,
 				not sure if would use his services again</p>
+		</div>
+	</div>
+	<div class="row">
+		<div class="review-col">
+			<h3>Master of his craft</h3>
+			<p>Huge thanks to *nameredacted* for fixing my TV, methods were wierd, a few claps to the head and the picture came back.</p>
 		</div>
 	</div>
 
@@ -144,8 +148,6 @@
 
 </script>
 
-</body>
-
 <style type="text/css">
 	* {
 	margin: 0;
@@ -156,7 +158,7 @@
 .header {
 	min-height: 100vh;
 	width: 100%;
-	background-image: linear-gradient(rgba(4, 9, 30, 0.70), rgba(4, 9, 30, 0.7)), url(banner.jpg);
+	background-image: linear-gradient(rgba(5, 9, 30, 0.70), rgba(4, 9, 30, 0.7)), url('https://therestaurantzone.com/blog/wp-content/uploads/2017/01/restaurant-recruiting-tools.jpg');
 	background-position: center;
 	background-size: cover;
 	position: relative;
@@ -377,4 +379,8 @@ p {
 	padding: 10px;
 }
 </style>
+
+</body>
+
+
 </html>
