--- a/team_qwe/src/main/resources/templates/database/findSecurityByTickerOrName.html
+++ b/team_qwe/src/main/resources/templates/database/findSecurityByTickerOrName.html
@@ -79,7 +79,7 @@
 
     <td th:if="${errors != null}">
         <tr th:each="error : ${errors}">
-            <td th:text="${error.field}"></td>
+            <td th:text="${error.field} + ':'"></td>
             <td th:text="${error.message}"></td>
         </tr>
     </td>
