--- a/team_qwe/src/main/resources/templates/userdata/findUserByIdOrName.html
+++ b/team_qwe/src/main/resources/templates/userdata/findUserByIdOrName.html
@@ -9,30 +9,18 @@
 <style type="text/css">
         body {
               background-color: #8E8F92;
-              margin-left: 20%;
-              margin-right: 20%;
-              text-align: left;
-              border: 2px dotted black;
+              margin-left: 30%;
+              margin-right: 30%;
+              text-align: center;
               padding: 20px 20px 20px 20px;
               font-family: sans-serif;
         }
-        submit {
-              color: black;
-              padding: 15px 32px;
-              text-align: center;
-              text-decoration: none;
-              display: inline-block;
-              font-size: 16px;
-              margin: 4px 2px;
-              cursor: pointer;
-        }
-        table {
+        table.table2 {
                border-collapse: collapse;
                width: 100%;
         }
-        th, td {
+        table.table2 td {
                 padding: 0.25rem;
-                text-align: left;
                 border: 1px solid #ccc;
         }
         caption {
@@ -49,60 +37,65 @@
 </style>
 <body>
 
-<h3 style="text-align: center;">Find user by id or name</h3>
-
-<form action="/userdata/findUserByIdOrName" th:object="${request}" method="post">
-
-    <td>Enter id or name:</td>
-    <input type="text" th:field="${request.userName}"/>
-    <input type="submit" value="Find" name="Submit"/>
-
-</form>
-
-<td th:if="${user != null}">
-    <table>
-        <caption>User</caption>
-        <tr>
-            <td class="center">ID</td>
-            <td class="center">NAME</td>
-            <td class="center">AGE</td>
-            <td class="center">TYPE</td>
-            <td class="center">INITIAL INVESTMENT</td>
-            <td class="center">CASH</td>
-            <td class="center">PORTFOLIO GENERATION DATE</td>
-            <td class="center">RISK TOLERANCE</td>
-        </tr>
-
-        <td th:if="${user != null}">
-            <tr th:each="user : ${user}">
-                <td th:text="${user.id}"></td>
-                <td th:text="${user.name}"></td>
-                <td class="right" th:text="${user.age}"></td>
-                <td class="center" th:text="${user.type}"></td>
-                <td class="right" th:text="${user.initialInvestment}"></td>
-                <td class="right" th:text="${T(lv.javaguru.java2.qwe.core.utils.UtilityMethods).round(user.cash)}"></td>
-                <td class="right" th:text="${user.portfolioGenerationDate}"></td>
-                <td class="center" th:text="${user.riskTolerance}"></td>
+<fieldset>
+    <legend style="padding-bottom: 5px;">FIND USER</legend>
+    <table style="margin-left: auto; margin-right: auto;">
+        <form action="/userdata/findUserByIdOrName" th:object="${request}" method="post">
+            <tr>
+                <td>Enter id or name:</td>
+                <td><input type="text" th:field="${request.userName}"/></td>
+                <td><input type="submit" value="Find" name="Submit"/></td>
             </tr>
-        </td>
-
+        </form>
     </table>
-</td>
+    <br>
 
-<td th:if="${errors != null}">
-    <tr th:each="error : ${errors}">
-        <td th:text="${error.field}"></td>
-        <td th:text="${error.message}"></td>
-    </tr>
-</td>
+    <td th:if="${user != null}">
+        <table class="table2">
 
-<td th:if="${noResult != null}">
-<td th:text="${noResult}"></td>
+            <tr>
+                <td class="center">ID</td>
+                <td class="center">NAME</td>
+                <td class="center">AGE</td>
+                <td class="center">TYPE</td>
+                <td class="center">INITIAL INVESTMENT</td>
+                <td class="center">CASH</td>
+                <td class="center">PORTFOLIO GENERATION DATE</td>
+                <td class="center">RISK TOLERANCE</td>
+            </tr>
 
+            <td th:if="${user != null}">
+                <tr th:each="user : ${user}">
+                    <td th:text="${user.id}"></td>
+                    <td th:text="${user.name}"></td>
+                    <td class="right" th:text="${user.age}"></td>
+                    <td class="center" th:text="${user.type}"></td>
+                    <td class="right" th:text="${user.initialInvestment}"></td>
+                    <td class="right"
+                        th:text="${T(lv.javaguru.java2.qwe.core.utils.UtilityMethods).round(user.cash)}"></td>
+                    <td class="right" th:text="${user.portfolioGenerationDate}"></td>
+                    <td class="center" th:text="${user.riskTolerance}"></td>
+                </tr>
+            </td>
+
+        </table>
+    </td>
+
+    <td th:if="${errors != null}">
+        <tr th:each="error : ${errors}">
+            <td th:text="${error.field} + ':'"></td>
+            <td th:text="${error.message}"></td>
+        </tr>
+    </td>
+
+    <td th:if="${noResult != null}">
+    <td th:text="${noResult}"></td>
+
+</fieldset>
+<br>
 
 <form action="/userMenu" method="get">
-    <br>
-    <input type="submit" style="font-size: 100%;" value="Return to User menu" name="Submit"/>
+    <input type="submit" style="float: right;" value="Back" name="Submit"/>
 </form>
 
 </body>
